--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 							  <li><a href="https://www.facebook.com/Jamison904" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							  <li><a href="https://github.com/jamison904" class="icon fa-github"><span class="label">Github</span></a></li>
 							  <li><a href="https://play.google.com/store/apps/developer?id=Infamous+Productions" class="icon fa-android"><span class="label">Play Store</span></a></li>
+<li><a href="http://goo.gl/Gw2Lf9" class="icon fa-paypal"><span class="label">Donate</span></a></li>
 							  <li><a href="mailto:james.jamison85@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
