--- a/index.html
+++ b/index.html
@@ -38,8 +38,14 @@
 							  <li><a href="https://www.facebook.com/Jamison904" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							  <li><a href="https://github.com/jamison904" class="icon fa-github"><span class="label">Github</span></a></li>
 							  <li><a href="https://play.google.com/store/apps/developer?id=Infamous+Productions" class="icon fa-android"><span class="label">Play Store</span></a></li>
-<li><a href="http://goo.gl/Gw2Lf9" class="icon fa-paypal"><span class="label">Donate</span></a></li>
-							  <li><a href="mailto:james.jamison85@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+<li><a href="http://infamousdevelopment.com" class="icon fa-wordpress"><span class="label">Blog</span></a></li>
+<li><a href="https://www.linkedin.com/profile/view?id=141690492" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+<li><a href="instagram.com/jamison904/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+<li><a href="https://bitbucket.org/jamison904/" class="icon fa-bitbucket"><span class="label">Bitbucket</span></a></li>
+<li><a href="http://twitter.com/jamison904/" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+<li><a href="http://infamousdevelopment.com/forum/" class="icon fa-globe"><span class="label">Webpage</span></a></li>
+
+							  <li><a href="mailto:james.jamison85@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li><li><a href="http://goo.gl/Gw2Lf9" class="icon fa-paypal"><span class="label">Donate</span></a></li>
 							</ul>
 						</nav>
 					</header>
