--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <li><a href="http://twitter.com/jamison904/" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 <li><a href="http://infamousdevelopment.com/forum/" class="icon fa-globe"><span class="label">Webpage</span></a></li>
 
-							  <li><a href="mailto:james.jamison85@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li><li><a href="http://goo.gl/Gw2Lf9" class="icon fa-paypal"><span class="label">Donate</span></a></li>
+							  <li><a href="mailto:james.jamison85@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li><li><a href="http://goo.gl/Gw2Lf9" class="icon fa-paypal"><span class="label">Donate</span></a></li><li><a href="http://jamison904.com/resume/" class="icon fa-pencil-square-o"><span class="label">Resume</span></a></li>
 							</ul>
 						</nav>
 					</header>
